--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -14,9 +14,14 @@
         android:layout_height="wrap_content"
         android:text="@string/hello_world"
         android:id="@+id/textView" />
+
     <TextView
+        android:id="@+id/textView1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/app_name"
-        android:layout_below="@+id/textView" />
+        android:layout_alignStart="@id/textView"
+        android:layout_below="@id/textView"
+        android:layout_marginTop="16dp"
+        android:text="@string/another_string"
+        android:textColor="@color/blue" />
 </RelativeLayout>
